--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "config": "^1.29.4",
+    "bcrypt": "^3.0.6",
+    "compression": "^1.7.4",
+    "config": "^1.31.0",
+    "cors": "^2.8.5",
     "express": "^4.16.2",
     "express-async-errors": "^2.1.0",
     "helmet": "^3.18.0",
     "joi": "^13.1.0",
     "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.14",
     "mongoose": "^5.0.2",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
