--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest --watchAll --verbose"
   },
   "engines": {
-    "node": "^10.16.0"
+    "npm": "6.9.0",
+    "node": "v10.16.0"
   },
   "keywords": [],
   "author": "",
